add validations and new entities